--- a/app.json
+++ b/app.json
@@ -19,7 +19,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.aromiInc.aromi"
     },
     "web": {
       "bundler": "metro",
@@ -27,7 +28,25 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "./assets/fonts/Palanquin-Bold.ttf",
+            "./assets/fonts/Palanquin-ExtraLight.ttf",
+            "./assets/fonts/Palanquin-Light.ttf",
+            "./assets/fonts/Palanquin-Medium.ttf",
+            "./assets/fonts/Palanquin-Regular.ttf",
+            "./assets/fonts/Palanquin-SemiBold.ttf",
+            "./assets/fonts/Palanquin-Thin.ttf",
+            "./assets/fonts/PalanquinDark-Bold.ttf",
+            "./assets/fonts/PalanquinDark-Medium.ttf",
+            "./assets/fonts/PalanquinDark-Regular.ttf",
+            "./assets/fonts/PalanquinDark-SemiBold.ttf"
+          ]
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
