--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
+    "@aws-amplify/react-native": "^1.1.5",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
+    "@types/graphql": "^14.2.3",
+    "aws-amplify": "^6.6.0",
     "eslint-config-standard-react": "^13.0.0",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
@@ -33,6 +39,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
