Added backend submodule

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "aromi-backend/src/schema/typeDefs.ts", "aromi-backend/handler.ts"  ]
 }
