--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,44 @@
 {
-    "[typescriptreact]": {
-        "editor.defaultFormatter": "dbaeumer.vscode-eslint"
-    },
-    "files.autoSave": "afterDelay",
-    "editor.defaultFormatter": "dbaeumer.vscode-eslint",
-    "eslint.codeActionsOnSave.rules": null,
-    "eslint.format.enable": true
+  "files.exclude": {
+    "amplify/.config": true,
+    "amplify/**/*-parameters.json": true,
+    "amplify/**/amplify.state": true,
+    "amplify/**/transform.conf.json": true,
+    "amplify/#current-cloud-backend": true,
+    "amplify/backend/amplify-meta.json": true,
+    "amplify/backend/awscloudformation": true
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+  "files.autoSave": "afterDelay",
+  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
+  "eslint.codeActionsOnSave.rules": null,
+  "eslint.format.enable": true,
+  "yaml.customTags": [
+    "!Ref scalar",
+    "!Sub scalar",
+    "!GetAtt scalar",
+    "!GetAtt sequence",
+    "!Base64 scalar",
+    "!Join sequence",
+    "!Select sequence",
+    "!FindInMap sequence",
+    "!ImportValue scalar",
+    "!ImportValue sequence",
+    "!If sequence",
+    "!And sequence",
+    "!Or sequence",
+    "!Not sequence",
+    "!Equals sequence"
+  ],
+  "[yaml]": {
+    "editor.defaultFormatter": "redhat.vscode-yaml"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  }
 }
