--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
-    "@aws-amplify/react-native": "^1.1.5",
+    "@aws-sdk/client-secrets-manager": "^3.654.0",
+    "@aws-sdk/client-ssm": "^3.654.0",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "^11.3.2",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
-    "@types/graphql": "^14.2.3",
-    "aws-amplify": "^6.6.0",
     "eslint-config-standard-react": "^13.0.0",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
