Restructure; integration of backend

--- a/package.json
+++ b/package.json
@@ -14,16 +14,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@apollo/client": "^3.11.8",
-    "@aws-sdk/client-secrets-manager": "^3.654.0",
-    "@aws-sdk/client-ssm": "^3.654.0",
+    "@aws-amplify/react-native": "^1.1.5",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
-    "eslint-config-standard-react": "^13.0.0",
+    "aws-amplify": "^5.3.23",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.25",
@@ -47,24 +45,28 @@
     "react-native-styled-components": "^2.1.0",
     "react-native-svg": "15.2.0",
     "react-native-system-navigation-bar": "^2.6.4",
-    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "standard": "^17.1.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "eslint": "^8.55.0",
+    "eslint-config-standard-react": "^13.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "graphql-tag": "^2.12.6",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "react-native-linear-gradient": "^2.8.3",
     "react-test-renderer": "18.2.0",
+    "standard": "^17.1.0",
     "typescript": "~5.3.3"
   },
   "private": true
