--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "graphql-tag": "^2.12.6",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "react-native-elements": "^3.4.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-test-renderer": "18.2.0",
     "standard": "^17.1.0",
