--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,5 +40,8 @@
   },
   "[json]": {
     "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "[graphql]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
