--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,4 +1,5 @@
 {
+  "whyContinueWithGen1": "I find the Gen 1 CLI easier to use",
   "projectName": "aromimobile",
   "version": "3.1",
   "frontend": "javascript",
