--- a/package.json
+++ b/package.json
@@ -14,17 +14,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@aws-amplify/react-native": "^1.1.5",
+    "@aws-amplify/react-native": "^1.1.6",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/native": "^6.1.18",
-    "aws-amplify": "^5.3.23",
+    "@react-navigation/native": "^6.0.2",
+    "aws-amplify": "^6.6.5",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.25",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -34,23 +31,20 @@
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react-native": "^0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-navigation-bar-color": "^2.0.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-splash-screen": "^3.3.0",
-    "react-native-styled-components": "^2.1.0",
-    "react-native-svg": "15.2.0",
-    "react-native-system-navigation-bar": "^2.6.4",
+    "react-native-svg": "^15.8.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@react-native-masked-view/masked-view": "^0.3.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-native-vector-icons": "^6.4.18",
@@ -61,13 +55,10 @@
     "eslint-config-standard-react": "^13.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "graphql-tag": "^2.12.6",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
-    "react-native-elements": "^3.4.3",
-    "react-native-linear-gradient": "^2.8.3",
     "react-test-renderer": "18.2.0",
-    "standard": "^17.1.0",
+    "standard": "^17.1.2",
     "typescript": "~5.3.3"
   },
   "private": true
