Auth updates: log in, sign up, confirmation, context

--- a/app.json
+++ b/app.json
@@ -9,8 +9,7 @@
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./src/assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#CC612B"
+      "resizeMode": "contain"
     },
     "ios": {
       "supportsTablet": true,
