Splash screen wait for assets, auth updates

--- a/app.json
+++ b/app.json
@@ -48,6 +48,14 @@
             "./src/assets/fonts/PlaywriteGBS-Regular.ttf"
           ]
         }
+      ],
+      [
+        "expo-asset",
+        {
+          "assets": [
+            "./src/assets/images/logo.png"
+          ]
+        }
       ]
     ],
     "experiments": {
