--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@rlemasquerier/react-native-keyboard-scrollview": "^0.2.1",
     "aws-amplify": "^6.6.5",
     "expo": "~51.0.28",
+    "expo-asset": "~10.0.10",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image": "~1.13.0",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "0.27.5",
@@ -45,8 +47,7 @@
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "styled-components": "^6.1.13",
-    "expo-asset": "~10.0.10"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
