--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-, "aromi-backend/src/schema/typeDefs.ts", "aromi-backend/handler.ts"  ]
+    "expo-env.d.ts",
+    "aromi-backend/src/schema/typeDefs.ts",
+    "aromi-backend/handler.ts"
+  ]
 }
