--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-community/slider": "^4.5.5",
     "@react-navigation/native": "^6.0.2",
     "@rlemasquerier/react-native-keyboard-scrollview": "^0.2.1",
     "aws-amplify": "^6.6.5",
@@ -40,6 +41,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-notifier": "^2.0.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
