--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
