--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
-    "ios": "expo run:ios",
+    "ios": "concurrently --raw \"expo run:ios\" \"npm run codegen\"",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "codegen": "graphql-codegen --config codegen.ts --watch"
   },
   "jest": {
     "preset": "jest-expo"
@@ -36,6 +37,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.5",
@@ -57,12 +59,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@graphql-codegen/cli": "^5.0.5",
+    "@parcel/watcher": "^2.5.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
+    "concurrently": "^9.1.2",
     "eslint": "^8.55.0",
     "eslint-config-standard-react": "^13.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
