--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "aws-amplify": "^6.13.2",
     "expo": "^52.0.37",
     "expo-asset": "~11.0.4",
+    "expo-blur": "^14.0.3",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
     "expo-image": "~2.0.6",
