--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.9",
+    "@apollo/client-devtools-vscode": "^4.19.11",
     "@aws-amplify/react-native": "^1.1.7",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.14",
@@ -28,6 +29,7 @@
     "expo-blur": "^14.0.3",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
+    "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.6",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
